--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Art Quiz</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="main.js"></script>
 </head>
 
 <body>
@@ -18,13 +20,8 @@
                 <h2>Započni kviz</h2>
             </div>
             <div id="quiz">
-                <div id="question_image"></div>
-                <div id="answers">
-                    <div id="answer" id="A" onclick="check_answer('A')"></div>
-                    <div id="answer" id="B" onclick="check_answer('B')"></div>
-                    <div id="answer" id="C" onclick="check_answer('C')"></div>
-                    <div id="answer" id="D" onclick="check_answer('D')"></div>
-                </div>
+                <div id="question-image"></div>
+                <div id="answers"></div>
             </div>
             <div id="score"></div>
         </div>
@@ -34,7 +31,6 @@
         <small>Copyright &copy; Vukory 2020-2020</small>
     </footer>
 
-    <script src="quiz.js"></script>
 </body>
 
 </html>
