Added alt text and documentation

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 </head>
 
 <body>
+
   <header class="padded">
     <h1>Art Quiz</h1>
   </header>
+
   <main class="padded">
+
+    <!-- Kontejner u kojen je smjesteno sve vezano za funkcionalnost igrice -->
     <div id="container">
+
       <div id="start-container" class="framed">
         <p>Kviz testiranja poznavanja autora poznatih djela. Kviz se satoji od stiliziranih verzija umjetničkih djela.
           Povežite svako djelo sa odgovarajućim umjetnikom. Sretno!</p>
@@ -24,12 +29,18 @@
           <h2>Započni kviz</h2>
         </div>
       </div>
+
       <div id="quiz">
+        <!-- Kontejner u koji se ubacuje slika za svako od pitanja -->
         <div id="question-image"></div>
+        <!-- Kontejner u koji se ubacuju svi ponuđeni odgovori za odgovarajucu sliku -->
         <div id="answers"></div>
       </div>
+
+      <!-- Kontejner u koji se smjesta rezultat na kraju igre -->
       <div id="score" class="framed"></div>
     </div>
+
   </main>
 
   <footer class="padded">
